# GTK-SDL2

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  main.c
